chore: add x-speakeasy-match to Terraform-specific extensions list

--- a/docs/speakeasy-reference/extensions.mdx
+++ b/docs/speakeasy-reference/extensions.mdx
@@ -74,7 +74,8 @@ x-speakeasy-extension-rewrite:
     { extension: "x-speakeasy-terraform-plan-only", description: "Ensure that only values from the Terraform plan are used during updates, overriding prior state or default values." },
     { extension: "x-speakeasy-type-override", description: "Allows the conversion of an attribute to a JSON string, accommodating dynamic structures in Terraform configurations." },
     { extension: "x-speakeasy-wrapped-attribute", description: "Enables additional API operation data to be placed under a specifically named attribute." },
-    { extension: "x-speakeasy-xor-with", description: "Indicate mutually exclusive properties to prevent incompatible combinations in Terraform configurations." }
+    { extension: "x-speakeasy-xor-with", description: "Indicate mutually exclusive properties to prevent incompatible combinations in Terraform configurations." },
+    { extension: "x-speakeasy-match", description: "Adjusts an API parameter name to align with a Terraform state property." }
   ]}
   columns={[
     { key: "extension", header: "Terraform extension" },
