docs: Update mintlify guide to reflect mint.json to docs.json update

--- a/docs/integrations/mintlify.mdx
+++ b/docs/integrations/mintlify.mdx
@@ -35,11 +35,48 @@ To integrate Mintlify with Speakeasy, you'll need the following:
 
 <GetPublicUrlSnippet />
 
-### Update the `mint.json` configuration file 
+### Update the configuration file
 
-Add the combined spec URL to **Anchors** or **Tabs** in the `mint.json` file of a Mintlify repository. Anchors are displayed as a list of links on the left side of the documentation, while Tabs are displayed as tabs along the top of the documentation.
+Add the combined spec URL to **Anchors** or **Tabs** in the configuration file of a Mintlify repository.
 
-Add the combined spec URL to **Anchors** by updating the `anchor` field in the `mint.json` file as follows:
+**Note:** Mintlify has transitioned from `mint.json` to `docs.json` as their primary configuration file. The configuration format remains the same, but the filename has changed.
+
+#### Using docs.json (Recommended)
+
+Add the combined spec URL to **Anchors** by updating the `anchor` field in the `docs.json` file as follows:
+
+```json docs.json
+{
+  "anchors": [
+    {
+      "name": "API Reference",
+      // !mark
+      "openapi": "SPEAKEASY_COMBINED_SPEC_URL",
+      "url": "api-reference",
+      "icon": "square-terminal"
+    }
+  ]
+}
+```
+
+Add the combined spec URL to **Tabs** by updating the `tab` field in the `docs.json` file as follows:
+
+```json docs.json
+{
+  "tabs": [
+    {
+      "name": "API Reference",
+      "url": "api-reference",
+      // !mark
+      "openapi": "SPEAKEASY_COMBINED_SPEC_URL"
+    }
+  ]
+}
+```
+
+#### Using mint.json (Legacy)
+
+If you're using the legacy `mint.json` configuration file, the format remains the same:
 
 ```json mint.json
 {
@@ -54,8 +91,6 @@ Add the combined spec URL to **Anchors** by updating the `anchor` field in the `
   ]
 }
 ```
-
-Add the combined spec URL to **Tabs** by updating the `tab` field in the `mint.json` file as follows:
 
 ```json mint.json
 {
