doc: add link to TF config reference to TF customization overview page

--- a/docs/terraform/index.mdx
+++ b/docs/terraform/index.mdx
@@ -47,3 +47,7 @@ Access advanced customization options for fine-grained control.
 ### [Schema Keywords](/docs/terraform/schema-keywords)
 
 Learn about supported OpenAPI schema keywords and their behavior.
+
+### [Configuration Reference](/docs/speakeasy-reference/generation/terraform-config)
+
+Complete reference for all available Terraform configuration options in the `gen.yaml` file.
