--- a/docs/terraform/index.mdx
+++ b/docs/terraform/index.mdx
@@ -48,6 +48,10 @@ Access advanced customization options for fine-grained control.
 
 Learn about supported OpenAPI schema keywords and their behavior.
 
+### [Common Troubleshooting & Recipes](/docs/terraform/common-troubleshooting)
+
+Learn about overcoming API design incompatibilities when generating Terraform providers with Speakeasy.
+
 ### [Configuration Reference](/docs/speakeasy-reference/generation/terraform-config)
 
 Complete reference for all available Terraform configuration options in the `gen.yaml` file.
