Edit: Resource configuration

--- a/docs/terraform/resource-configuration.mdx
+++ b/docs/terraform/resource-configuration.mdx
@@ -1,13 +1,13 @@
 ---
 title: "Resource Configuration"
-description: "Learn how to customize a generated Terraform Provider resource, such as custom descriptions."
+description: "Learn how to customize a generated Terraform Provider resource with custom descriptions and versioning."
 ---
 
-# Resource Configuration
+# Resource configuration
 
-## Resource Description
+## Resource description
 
-The `x-speakeasy-entity-description` extension allows modification of the description of a Terraform data or managed resource. This is useful when augmenting the documentation in an OpenAPI specification with documentation for specific resources. This documentation is expected to be in Markdown format. Use this extension alongside the `x-speakeasy-entity` extension.
+The `x-speakeasy-entity-description` extension modifies the description of a Terraform data or managed resource. This is useful when augmenting the documentation for specific resources in an OpenAPI document. This documentation is expected to be in Markdown format. Use this extension alongside the `x-speakeasy-entity` extension.
 
 ```yaml
 components:
@@ -24,11 +24,11 @@ components:
         }
 ```
 
-Alternatively, a template folder can be written to customize any or all aspects of generated documentation in alignment with [terraform-plugin-docs](https://github.com/hashicorp/terraform-plugin-docs).
+Alternatively, a template folder can be written to customize any or all aspects of generated documentation in alignment with [`terraform-plugin-docs`](https://github.com/hashicorp/terraform-plugin-docs).
 
-## Resource Version
+## Resource version
 
-The `x-speakeasy-entity-version` extension specifies the version of a given resource and should *only* be used if you need to write a state migrator, for instance, if you are changing the type of a field.
+The `x-speakeasy-entity-version` extension specifies the version of a given resource and should **only** be used if you need to write a state migrator, for instance, for changing the type of a field.
 
 Terraform resource versions are zero-indexed and default to `0`. For your first breaking change requiring a state migrator, set `x-speakeasy-entity-version: 1`. Each state migrator function must migrate from the previous version of the state.
 
