Edit: Custom code regions in Java

--- a/docs/customize/code/code-regions/java.mdx
+++ b/docs/customize/code/code-regions/java.mdx
@@ -1,12 +1,12 @@
 ---
-title: Custom code regions in Java
+title: Custom Code Regions in Java
 description: "Learn how to use custom code regions in Java SDKs."
 ---
 
 # Custom code regions in Java
 
 To enable custom code regions for Java SDKs, update the project's
-`.speakeasy/gen.yaml` file like so:
+`.speakeasy/gen.yaml` file as follows:
 
 ```diff .speakeasy/gen.yaml
 configVersion: 2.0.0
@@ -19,8 +19,7 @@ java:
 
 ## Full example
 
-The Speakeasy examples repository has a [full example](https://github.com/speakeasy-api/examples/tree/main/customcode-sdkclasses-java) of a Java SDK
-that uses custom code regions.
+The Speakeasy examples repository includes a [full Java SDK](https://github.com/speakeasy-api/examples/tree/main/customcode-sdkclasses-java) that uses custom code regions.
 
 ## Regions
 
@@ -30,22 +29,22 @@ Below are the available code regions in Java SDKs.
 
 Java SDK classes can have two code regions:
 
-- `// #region imports` - allows the addition of imports to an SDK file needed for
-  custom methods and properties. This region must be located at the top of the
+- `// #region imports`: The imports region allows you to add imports needed for
+  custom methods and properties to an SDK file. It must be located at the top of the
   file alongside generated imports.
-- `// #region class-body` - allows the addition of custom methods and
-  properties to an SDK class. This region must be located in the body of a Java
+- `// #region class-body`: The class-body region allows you to add custom methods and
+  properties to an SDK class. It must be located in the body of a Java
   SDK class alongside generated methods and properties.
 
 ### Model classes
 
 Java model classes can also have custom code regions:
 
-- `// #region imports` - allows the addition of imports to a model file needed for
-  custom methods and properties. This region must be located at the top of the
+- `// #region imports`: The imports region allows you to add imports needed for
+  custom methods and properties to a model file. It must be located at the top of the
   file alongside generated imports.
-- `// #region class-body` - allows the addition of custom methods and
-  properties to a model class. This region must be located in the body of a Java
+- `// #region class-body`: The class-body region allows you to add custom methods and
+  properties to a model class. It must be located in the body of a Java
   model class alongside generated methods and properties.
 
 ## Managing dependencies
@@ -61,7 +60,7 @@ java:
     - testImplementation:org.mockito:mockito-core:5.1.1
 ```
 
-This ensures dependencies persist across SDK regenerations and are properly included in the generated `build.gradle`.
+This ensures that dependencies persist across SDK regenerations and are properly included in the generated `build.gradle`.
 
 ```java src/main/java/com/example/sdk/Todos.java
 /*
@@ -116,7 +115,7 @@ public class Todos implements
 
 ## Model class example
 
-You can also add custom methods to model classes. Here's an example of adding a `render()` method to a `Todo` model class:
+You can also add custom methods to model classes. This example adds a `render()` method to a `Todo` model class:
 
 ```java src/main/java/com/example/sdk/models/components/Todo.java
 /*
@@ -203,7 +202,7 @@ public class Todo {
 }
 ```
 
-This allows you to use the custom method like so:
+This allows you to use the custom method as follows:
 
 ```java
 Todo todo = ...;
