Edit import descriptions

--- a/docs/customize/code/code-regions/java.mdx
+++ b/docs/customize/code/code-regions/java.mdx
@@ -29,8 +29,8 @@ Below are the available code regions in Java SDKs.
 
 Java SDK classes can have two code regions:
 
-- `// #region imports`: The imports region allows you to add imports needed for
-  custom methods and properties to an SDK file. It must be located at the top of the
+- `// #region imports`: The imports region allows you to add imports to an SDK file needed for
+  custom methods and properties. It must be located at the top of the
   file alongside generated imports.
 - `// #region class-body`: The class-body region allows you to add custom methods and
   properties to an SDK class. It must be located in the body of a Java
@@ -40,8 +40,8 @@ Java SDK classes can have two code regions:
 
 Java model classes can also have custom code regions:
 
-- `// #region imports`: The imports region allows you to add imports needed for
-  custom methods and properties to a model file. It must be located at the top of the
+- `// #region imports`: The imports region allows you to add imports to a model file needed for
+  custom methods and properties. It must be located at the top of the
   file alongside generated imports.
 - `// #region class-body`: The class-body region allows you to add custom methods and
   properties to a model class. It must be located in the body of a Java
