Edit imports description

--- a/docs/customize/code/code-regions/python.mdx
+++ b/docs/customize/code/code-regions/python.mdx
@@ -30,8 +30,8 @@ Below are the available code regions in Python SDKs.
 
 Python SDK classes can have two code regions:
 
-* `# region imports`: The imports region allows you to add imports needed for
-custom methods and properties to an SDK file. It must be located at the top of the
+* `# region imports`: The imports region allows you to add imports to an SDK file needed for
+custom methods and properties. It must be located at the top of the
 file alongside generated imports.
 * `# region sdk-class-body`: The class-body region allows you to add custom methods and
 properties to an SDK class. It must be located in the body of a Python
