--- a/docs/terraform/provider-configuration.mdx
+++ b/docs/terraform/provider-configuration.mdx
@@ -7,7 +7,7 @@ description: "Learn how to customize the generated Terraform Provider, such as s
 
 ## Security
 
-The generated Terraform Provider will automatically implement all global security as defined in the OpenAPI document via the root-level `security` property and its associated `securitySchemes` components. Multiple security options are supported.
+The generated Terraform Provider will automatically implement all global security, as defined in the OpenAPI Specification, via the root-level `security` property and its associated `securitySchemes` components. Multiple security options are supported.
 
 In this example, the generated provider requires a bearer authentication token using an `access_token` provider-level attribute:
 
@@ -27,11 +27,11 @@ Operation-level security is neither supported nor recommended. Instead, we recom
 
 ## Globals
 
-Use the [`x-speakeasy-globals` extension](/docs/customize/globals) to enable provider-level configuration of common properties across multiple resources. This customization allows Terraform practitioners to configure a value via:
+Use the [`x-speakeasy-globals` extension](/docs/customize/globals) to enable provider-level configuration of common properties across multiple resources. This customization allows Terraform practitioners to configure a value in three ways:
 
-* Provider-level only: The default value is applied to any resources that use the global.
-* Resource-level only: The explicit value is applied only to those resource instance(s).
-* Provider-level with resource-level override: The default value is applied to any resources that use the global, but any explicit resource-level configurations override the provider-level value.
+* **Provider-level only:** The default value is applied to any resources that use the global.
+* **Resource-level only:** The explicit value is applied only to those resource instance(s).
+* **Provider-level with resource-level override:** The default value is applied to any resources that use the global, but any explicit resource-level configurations override the provider-level value.
 
 In this example, the provider will accept an `organization_id` configuration as a global:
 
